# zkwork_ironminer

./: .gitignore  Cargo.toml  README.md  install_deps.sh
script/: run_ironminer.sh  zkwork_ironminer.conf  zkwork_ironminer.service
src/: cli.rs  lib.rs  main.rs  meter.rs  miner.rs
src/stratum/: message.rs  mod.rs  stratum_client.rs
